--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,5 +1,404 @@
-@import "./_base.scss";
-@import "./_components.scss";
-@import "./_layout.scss";
-@import "./_normalize.scss";
+@charset "UTF-8";
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section,
+summary {
+  display: block;
+}
 
+audio,
+canvas,
+video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+[hidden], template {
+  display: none;
+}
+
+html {
+  background: #fff;
+  color: #000;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+html,
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  background: transparent;
+}
+a:focus {
+  outline: thin dotted;
+}
+a:hover, a:active {
+  outline: 0;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin: 0.83em 0;
+}
+
+h3 {
+  font-size: 1.17em;
+  margin: 1em 0;
+}
+
+h4 {
+  font-size: 1em;
+  margin: 1.33em 0;
+}
+
+h5 {
+  font-size: 0.83em;
+  margin: 1.67em 0;
+}
+
+h6 {
+  font-size: 0.75em;
+  margin: 2.33em 0;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b,
+strong {
+  font-weight: bold;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+q {
+  quotes: "“" "”" "‘" "’";
+}
+
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+figure {
+  margin: 0;
+}
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+legend {
+  border: 0;
+  padding: 0;
+  white-space: normal;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+}
+
+button, input {
+  line-height: normal;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html input[type=button],
+input[type=reset],
+input[type=submit] {
+  cursor: pointer;
+}
+
+button[disabled],
+input[disabled] {
+  cursor: default;
+}
+
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+input[type=search] {
+  box-sizing: content-box;
+}
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+html {
+  font-size: 10px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Inter", "Lexend Deca", sans-serif;
+  font-size: 1.6rem;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.stats-preview-card {
+  min-height: calc(100vh - 60px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0A0C1C;
+}
+
+.card {
+  max-width: 1110px;
+  display: flex;
+  background-color: #1B1937;
+  color: #FFFFFF;
+  border-radius: 8px;
+  box-shadow: 0px 20px 20px -10px rgba(23, 25, 41, 0.2);
+}
+
+.card__info {
+  flex: 1;
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 72px 72px 59px;
+}
+.card__image {
+  flex: 1;
+}
+
+.info-text__title {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-family: "Inter", sans-serif;
+  font-size: 3.6rem;
+  font-weight: 700;
+  line-height: 44px;
+}
+.info-text__description {
+  width: 374px;
+  font-family: "Inter", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 25px;
+  opacity: 0.75;
+}
+
+.title__word {
+  color: #AB5CDB;
+}
+
+.info-data {
+  width: 374px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.info-data__category {
+  display: flex;
+  flex-direction: column;
+}
+
+.category__volume {
+  font-family: "Inter", sans-serif;
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+.category__text {
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  opacity: 0.6;
+}
+
+.image {
+  height: 100%;
+}
+
+@media only screen and (max-width: 1200px) {
+  .desktop-only {
+    display: none;
+  }
+}
+
+.mobile-only {
+  display: block;
+}
+@media only screen and (min-width: 1200px) {
+  .mobile-only {
+    display: none;
+  }
+}
+
+.attribution {
+  width: 100%;
+  padding: 20px;
+  background-color: #AB5CDB;
+}
+.attribution__link:link {
+  color: var(--primary);
+}
+.attribution__link:visited {
+  color: purple;
+}
+.attribution__link:hover {
+  color: var(--secandary-dark);
+}
+.attribution__link:active {
+  color: blue;
+}
+
+@media only screen and (max-width: 1200px) {
+  .stats-preview-card {
+    padding: 88px 24px;
+  }
+  .card {
+    width: 100%;
+    max-width: 327px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  .card__info {
+    font-size: 2.8rem;
+    padding: 32px;
+    width: 100%;
+  }
+  .info-text {
+    text-align: center;
+  }
+  .info-text__title {
+    font-size: 2.8rem;
+    line-height: 32px;
+    margin-bottom: 16px;
+  }
+  .info-text__description {
+    width: 100%;
+  }
+  .info-data {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .info-data__category {
+    margin-top: 24px;
+    text-align: center;
+  }
+  .image {
+    width: 100%;
+  }
+  .attribution {
+    max-width: 100%;
+  }
+}/*# sourceMappingURL=main.css.map */
